fix: Fix modal z-index

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -190,6 +190,7 @@ body {
     
     &__toggle-input:checked ~ &__container {
         opacity: 1;
+        z-index: 1;
         transform: scale(1, 1);
 
         & .modal__content-wrapper > div {
@@ -233,6 +234,7 @@ body {
         background-color: rgba(4 ,4 , 4, .8);
         transition: all .3s ease-out;
         overflow: hidden;
+        z-index: -1;
 
         display: flex;
         justify-content: center;
